CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
SET(BUILD_SHARED_LIBS OFF)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

PROJECT(jd1
        VERSION 2023.4.3
        LANGUAGES C CXX
        )

#ADD_DEFINITIONS(-DOS_LINUX)

SET(SRC_DIR ${PROJECT_SOURCE_DIR}/code1-introduction)
SET(SRC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/code1-introduction)
#SET(LIBEE_TEST_DIR ${PROJECT_SOURCE_DIR}/test)
#SET(LIBEE_TEST_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/test/include)
SET(DEMO_DIR ${PROJECT_SOURCE_DIR}/demo)

FILE(GLOB CODE1_SOURCE RELATIVE ${CMAKE_SOURCE_DIR} "code1-introduction/*.cpp")
ADD_LIBRARY(code1 ${CODE1_SOURCE})
TARGET_INCLUDE_DIRECTORIES(
    code1
    PUBLIC ${SRC_INCLUDE_DIR}
)

ADD_EXECUTABLE(demo1 ${DEMO_DIR}/demo1.cpp)
TARGET_LINK_LIBRARIES(demo1 code1)
TARGET_INCLUDE_DIRECTORIES(
    demo1
    PUBLIC ${SRC_INCLUDE_DIR}
)



